templates/icinga2_template.yaml
---
# Source: icinga2/templates/master-1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-icinga2-master-1
  labels:
    helm.sh/chart: icinga2-0.9.4
    app.kubernetes.io/name: icinga2
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "2.13.5"
    app.kubernetes.io/managed-by: Helm
    component: icinga2-master-1

spec:

  selector:
    
    app.kubernetes.io/name: icinga2
    app.kubernetes.io/instance: release-name
    component: icinga2-master-1

  ports:
    - name: icinga2
      port: 5665
      targetPort: 5665
    
    - name: certsvc
      port: 8080
      targetPort: 8080
---
# Source: icinga2/templates/master-2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-icinga2-master-2
  labels:
    helm.sh/chart: icinga2-0.9.4
    app.kubernetes.io/name: icinga2
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "2.13.5"
    app.kubernetes.io/managed-by: Helm
    component: icinga2-master-2

spec:

  selector:
    
    app.kubernetes.io/name: icinga2
    app.kubernetes.io/instance: release-name
    component: icinga2-master-2

  ports:
    - name: icinga2
      port: 5665
      targetPort: 5665
    
    - name: certsvc
      port: 8080
      targetPort: 8080
---
# Source: icinga2/templates/web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-icinga2-web
  labels:
    helm.sh/chart: icinga2-0.9.4
    app.kubernetes.io/name: icinga2
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "2.13.5"
    app.kubernetes.io/managed-by: Helm
    component: web
spec:
  selector:
    
    app.kubernetes.io/name: icinga2
    app.kubernetes.io/instance: release-name
    component: web
  ports:
    - name: http
      port: 80
      targetPort: 80
---
# Source: icinga2/templates/master-1-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-icinga2-master-1
  labels:
    helm.sh/chart: icinga2-0.9.4
    app.kubernetes.io/name: icinga2
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "2.13.5"
    app.kubernetes.io/managed-by: Helm
    component: icinga2-master-1

spec:

  replicas: 1
  strategy:
    type: Recreate

  selector:
    matchLabels:
      app.kubernetes.io/name: icinga2
      app.kubernetes.io/instance: release-name
      component: icinga2-master-1

  template:

    metadata:
      labels:
        app.kubernetes.io/name: icinga2
        app.kubernetes.io/instance: release-name
        component: icinga2-master-1

    spec:
      # this prevents env variables for services in this namespace from being generated, as those might conflict
      enableServiceLinks: false
      hostname: "master-1"

      securityContext:
        runAsUser: 0
        fsGroup: 0

      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: component
                    operator: In
                    values:
                      - icinga2-master-2
              topologyKey: "kubernetes.io/hostname"
        
      

      containers:
        - name: master
          image: registry.gitlab.com/olemisea/icinga2:stable-2.13.5-master
          # command: ["sleep", "1000000"]
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 0
          ports:
            - containerPort: 5665
            - containerPort: 8080
            

          volumeMounts:
            - name: data
              mountPath: /var/lib/icinga2/api
              subPath: data
            - name: data
              mountPath: /var/lib/icinga2/backup
              subPath: backup
            - name: data
              mountPath: /var/lib/icinga2/certs
              subPath: certs
            - name: data
              mountPath: /var/lib/icinga2/ca
              subPath: ca

            - name: ca
              mountPath: /var/lib/icinga2/ca-readonly
              readOnly: true

            - name: tz-config
              mountPath: /etc/localtime

          resources:
            requests:
              cpu: "200m"
              memory: "500Mi"
            limits:
              memory: "2000Mi"

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: release-name-icinga2-master-1

        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Europe/Berlin

        - name: ca
          secret:
            secretName: release-name-icinga2-ca
---
# Source: icinga2/templates/master-2-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-icinga2-master-2
  labels:
    helm.sh/chart: icinga2-0.9.4
    app.kubernetes.io/name: icinga2
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "2.13.5"
    app.kubernetes.io/managed-by: Helm
    component: icinga2-master-2

spec:

  replicas: 1
  strategy:
    type: Recreate

  selector:
    matchLabels:
      app.kubernetes.io/name: icinga2
      app.kubernetes.io/instance: release-name
      component: icinga2-master-2

  template:

    metadata:
      labels:
        app.kubernetes.io/name: icinga2
        app.kubernetes.io/instance: release-name
        component: icinga2-master-2

    spec:
      # this prevents env variables for services in this namespace from being generated, as those might conflict
      enableServiceLinks: false
      hostname: "master-2"

      securityContext:
        runAsUser: 0
        fsGroup: 0

      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: component
                    operator: In
                    values:
                      - icinga2-master-1
              topologyKey: "kubernetes.io/hostname"
        
      

      containers:
        - name: master
          image: registry.gitlab.com/olemisea/icinga2:stable-2.13.5-master
          # command: ["sleep", "1000000"]
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 0
          ports:
            - containerPort: 5665
            - containerPort: 8080
            

          volumeMounts:
            - name: data
              mountPath: /var/lib/icinga2/api
              subPath: data
            - name: data
              mountPath: /var/lib/icinga2/backup
              subPath: backup
            - name: data
              mountPath: /var/lib/icinga2/certs
              subPath: certs
            - name: data
              mountPath: /var/lib/icinga2/ca
              subPath: ca

            - name: ca
              mountPath: /var/lib/icinga2/ca-readonly
              readOnly: true

            - name: tz-config
              mountPath: /etc/localtime

          resources:
            requests:
              cpu: "200m"
              memory: "500Mi"
            limits:
              memory: "2000Mi"

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: release-name-icinga2-master-2

        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Europe/Berlin

        - name: ca
          secret:
            secretName: release-name-icinga2-ca
---
# Source: icinga2/templates/web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-icinga2-web
  labels:
    helm.sh/chart: icinga2-0.9.4
    app.kubernetes.io/name: icinga2
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "2.13.5"
    app.kubernetes.io/managed-by: Helm
    component: web

spec:

  strategy:
    type: Recreate
  replicas: 1

  selector:
    matchLabels:
      app.kubernetes.io/name: icinga2
      app.kubernetes.io/instance: release-name
      component: web

  template:

    metadata:
      labels:
        app.kubernetes.io/name: icinga2
        app.kubernetes.io/instance: release-name
        component: web

    spec:
      # this prevents env variables for services in this namespace from being generated, as those might conflict
      enableServiceLinks: false

      terminationGracePeriodSeconds: 15

      

      

      containers:
        - name: web
          image: registry.gitlab.com/olemisea/icingaweb2:2.11.1
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 80

          volumeMounts:
            - name: tz-config
              mountPath: /etc/localtime

          resources:
            requests:
              cpu: "200m"
              memory: "500Mi"
            limits:
              memory: "1000Mi"

        

      volumes:
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Europe/Berlin
---
# Source: icinga2/templates/master-1-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-icinga2-master-1
  labels:
    helm.sh/chart: icinga2-0.9.4
    app.kubernetes.io/name: icinga2
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "2.13.5"
    app.kubernetes.io/managed-by: Helm
    component: icinga2-master-1
  annotations:
    icinga2-k8s-check/ingress-insecure-skip-verify: "true"
    ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
    - host: "master-1.test.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: release-name-icinga2-master-1
                port:
                  number: 5665
---
# Source: icinga2/templates/master-2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-icinga2-master-2
  labels:
    helm.sh/chart: icinga2-0.9.4
    app.kubernetes.io/name: icinga2
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "2.13.5"
    app.kubernetes.io/managed-by: Helm
    component: icinga2-master-2
  annotations:
    icinga2-k8s-check/ingress-insecure-skip-verify: "true"
    ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
    - host: "master-2.test.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: release-name-icinga2-master-2
                port:
                  number: 5665
---
# Source: icinga2/templates/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-icinga2-web
  labels:
    helm.sh/chart: icinga2-0.9.4
    app.kubernetes.io/name: icinga2
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "2.13.5"
    app.kubernetes.io/managed-by: Helm
    component: web
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    
    - secretName: release-name-icinga2-web-tls
      hosts:
        - icinga2.ops.dhswt.de
  rules:
    - host: "icinga2.ops.dhswt.de"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: release-name-icinga2-web
                port:
                  number: 80
